
**** org-brain

- binding for jumping to friend items (=gf=)
- binding for jumping to history items (=gh=)
- binding for jumping to pinned items (=gp=)
- new academic brain
- support for switching brains via =SPC o B=

*** Installer

- new =with_default_config= helper for installing a program
  with the default configuration

- support for AUR packages
  - installation
  - query latest version

- support for =version current= command with Arch Linux
  configuration

*** Xmobar

- battery percentage will now display in red if it drops to
  30%

- initial display for wireless network connection

- memory usage will now display in red if it hits 90%

** Changed

*** Emacs

- initial state for ~magit-stash-mode~ is now =motion=

- journal capture now records creation time in a property
  drawer

*** Installer

- default distribution is now Arch

*** Xmobar

- CPU display now refreshes every 5 seconds instead of every 1

- now only shows hours and minutes in time

- now uses Inconsolata font

** Fixed

- xmobar not spawning when starting xmonad

*** Emacs

- =j= and =k= not behaving as down/up item when on an agenda
  heading with =org-super-agenda-mode= active

- =m= and =u= not updating the follow view in =org-agenda=

- headings without a =TODO= keyword displaying in stuck
  projects

- upstream org getting overridden by built-in org

- =void-function mwith-buffer-modified-unmodified= error

** Removed

- fortune text no longer displays when opening a terminal

*** Emacs

- dependency on =el-get=

*** Installer

- =ghc7= configuration no longer directly supported by
  installer

* 0.9.0 - 2019-06-05

** Added

- =git-clone-my= command for cloning personal repositories

*** Emacs

**** Org

- automatic sorting of tags in Org by lexicographic ordering

- =Inbox= capture now includes a =CREATED= property

- support for refiling to any heading (in specific agenda
  files) that has a =category= tag

***** Agenda

- agenda configuration for specific project types